@@ -1,3 +1,8 @@
+2014-03-17  Adam Butcher  <adam@jessamine.co.uk>
+
+	PR c++/60391
+	* g++.dg/cpp1y/pr60391.C: New testcase.
+
 2014-03-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/60516
